Add draft indicator in the channel sidebar and channel switcher

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1857,6 +1857,7 @@
   "generic_icons.attach": "Attachment Icon",
   "generic_icons.back": "Back Icon",
   "generic_icons.breadcrumb": "Breadcrumb Icon",
+  "generic_icons.channel.draft": "Channel Draft Icon",
   "generic_icons.channel.private": "Private Channel Icon",
   "generic_icons.channel.public": "Public Channel Icon",
   "generic_icons.collapse": "Collapse Icon",
